fix(styleguide): fix scrollbar styles

--- a/src/styleguide/styles.css
+++ b/src/styleguide/styles.css
@@ -1,6 +1,7 @@
 body {
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
+    height: 10px;
   }
 
   &::-webkit-scrollbar-track {
@@ -8,15 +9,29 @@ body {
   }
 
   &::-webkit-scrollbar-thumb {
-    border: 4px solid #fff;
-    border-top-width: 0;
-    border-bottom-width: 0;
+    border: 3px solid #fff;
     background-color: #6b00cb;
-    min-height: 30px;
 
-    &:active {
-      border-left-width: 2px;
-      border-right-width: 2px;
+    &:vertical {
+      border-top-width: 0;
+      border-bottom-width: 0;
+      min-height: 40px;
+
+      &:active {
+        border-left-width: 2px;
+        border-right-width: 2px;
+      }
+    }
+
+    &:horizontal {
+      border-left-width: 0;
+      border-right-width: 0;
+      min-width: 40px;
+
+      &:active {
+        border-top-width: 2px;
+        border-bottom-width: 2px;
+      }
     }
   }
 }
